[package]
name = "rcon2mc"
version = "0.0.1-dev.2"
edition = "2024"
description = "A Rcon Client lib for Minecraft Server."
license = "MIT"
repository = "https://github.com/NearlyHeadlessJack/rcon2mc"
authors = ["NearlyHeadlessJack <wang@rjack.cn>"]
keywords = ["rcon", "minecraft", "http", "cli"]
readme = "README.md"
exclude = ["target/", "examples/", "tests/",".github/"]



[dependencies]
rand = "0.9.2"
thiserror = "2.0.18"

[lib]
name = "rcon2mc"
path = "src/lib.rs"

