[package]
name = "rcon2mc"
version = "0.0.4"
edition = "2024"
description = "A Rcon Client lib for Minecraft Server."
license = "MIT"
repository = "https://github.com/NearlyHeadlessJack/rcon2mc"
documentation = "https://docs.rs/rcon2mc"
authors = ["NearlyHeadlessJack <wang@rjack.cn>"]
keywords = ["rcon", "minecraft", "parser"]
readme = "README.md"
exclude = ["target/", "examples/", "tests/",".github/","test/","src/bin/"]



[dependencies]
thiserror = "2.0.18"



[lib]
name = "rcon2mc"
path = "src/lib.rs"

